# gap-architect-ai-mvp

./: .env.dev.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.dev.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260209130000_create_gap_schema.py  20260209190000_add_match_percent.py  20260209200000_add_match_reason.py  20260213170000_add_jd_clean_runs.py  20260213173000_add_error_message_to_jd_clean_runs.py  20260214143000_add_failed_timeout_status.py  20260215184500_add_pending_timeout_index.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  gap_analyses.py
backend/app/core/: config.py  logging.py  middleware.py
backend/app/db/: session.py
backend/app/models/: __init__.py  gap.py
backend/app/schemas/: __init__.py  gap_analysis.py
backend/app/services/: __init__.py  gap_analysis_ai.py  gap_analysis_service.py  input_validation.py  jd_clipping.py  llm_service.py  log_sanitize.py  skill_matcher.py  skill_taxonomy.py  text_processing.py
backend/datasets/: canonical_skills.txt
backend/tests/: conftest.py  factories.py  test_advanced_edge_cases.py  test_api_contract.py  test_caching_behavior.py  test_concurrency_atomicity.py  test_edge_cases.py  test_entity_refiner.py  test_fingerprint.py  test_input_validation_api.py  test_llm_json_validation.py  test_skill_token_synonyms.py
frontend/: .dockerignore  Dockerfile  (+4 more)
(+4 files in other folders)
