[project]
name = "gap-architect-backend"
version = "0.1.0"
description = "FastAPI backend for gap-architect"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv]
package = false

[tool.uv.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg = { version = "^3.1.18", extras = ["binary"] }
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"

[tool.uv.dev-dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"
